--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="master.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>NASA</title>
     <meta name = "author" value ="Fiamma Antonella Lugo Gutierrez">
@@ -11,15 +12,16 @@
     <link rel="icon" type="img/png" href="https://api.nasa.gov/assets/img/favicons/favicon-192.png">
 </head>
 <body>
-    <div class="container">
-        <h3 id="titulo" class="pt-5 text-center"></h3>
+    <main class="container">
+        <h3 id="titulo" class="pt-4 text-center"></h3>
         <p id="fecha" class="text-center"></p>
-        <p id="descripcion"  class="lead pt-5 "></p>
-        <div id="c_multimedia"  class="embed-responsive embed-responsive-21by9 text-center">
+        <div id="contenido" class="pt-4">
+            <div id="c_multimedia"  class="col-md-6 float-md-end mb-3 ms-md-3 embed-responsive embed-responsive-21by9 text-center">
+            </div>
+            <p id="descripcion" class="lead"></p>
         </div>
-    </div>
+    </main>
 </body>
 
 <script src="app.js"></script>
 </html>
-
